--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,10 @@
 [tox]
 isolated_build = True
 envlist =
-       {py38,py39,py31,py311}-{django41,djangomain}
-
-[travis:env]
-DJANGO =
-    4.1: django41
-    main: djangomain
+       {py38,py39,py310,py311}-{django41,djangomain}
 
 [testenv]
+whitelist_externals = pytest
 commands = pytest --cov-report term-missing --cov {posargs}
 envdir = {toxworkdir}/venvs/{envname}
 deps =
