Fixes for tests configuration

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,10 @@ envlist =
        {py38,py39,py310,py311}-{django41,djangomain}
 
 [testenv]
-whitelist_externals = pytest
-commands = pytest --cov-report term-missing --cov {posargs}
+whitelist_externals = poetry
+commands =
+        poetry install -v
+        poetry run pytest --cov-report term-missing --cov {posargs}
 envdir = {toxworkdir}/venvs/{envname}
 deps =
         django41: Django>=4.1,<4.2
