--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,22 +21,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
     - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-        cache: 'pip'
-        cache-dependency-path: 'requirements.txt'
 
-    - name: Upgrade packaging tools
-      run: python -m pip install --upgrade pip setuptools virtualenv wheel
+    - name: Install poetry
+      run: python -m pip install poetry==1.2.2
 
     - name: Install dependencies
-      run: python -m pip install --upgrade codecov tox tox-py
+      run: |
+        poetry env use ${{ matrix.python-version }}
+        poetry install --no-interaction
 
     - name: Run tox targets for ${{ matrix.python-version }}
-      run: tox --py current
-
-    - name: Upload coverage
-      run: |
-        codecov -e TOXENV,DJANGO
+      run: poetry run tox --py current
