--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytest = "^7.2.0"
 pytest_cov = "^4.0.0"
 pytest-django = "^4.5.2"
 tox = "^3.27.1"
+tox-py = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core"]
