--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 isolated_build = True
 envlist =
-       {py38,py39,py310,py311}-{django41,djangomain}
+       {py38,py39,py310,py311}-django41
+       {py310,py311}-djangomain
 
 [testenv]
 whitelist_externals = poetry
@@ -12,12 +13,6 @@ envdir = {toxworkdir}/venvs/{envname}
 deps =
         django41: Django>=4.1,<4.2
         djangomain: https://github.com/django/django/archive/main.tar.gz
-
-[testenv:py38-djangomain]
-ignore_outcome = true
-
-[testenv:py39-djangomain]
-ignore_outcome = true
 
 [testenv:py310-djangomain]
 ignore_outcome = true
