Addeded support for Django 4.2

--- a/tox.ini
+++ b/tox.ini
@@ -2,16 +2,17 @@
 isolated_build = True
 envlist =
        {py38,py39,py310,py311}-django41
+       {py38,py39,py310,py311}-django42
        {py310,py311}-djangomain
 
 [testenv]
-whitelist_externals = poetry
+allowlist_externals = poetry
 commands =
         poetry install -v
         poetry run pytest --cov-report term-missing --cov {posargs}
 envdir = {toxworkdir}/venvs/{envname}
 deps =
-        django41: Django>=4.1,<4.2
+        django41: Django>=4.1,<4.3
         djangomain: https://github.com/django/django/archive/main.tar.gz
 
 [testenv:py310-djangomain]
