--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,13 @@ readme = "README.md"
 license = "MIT"
 homepage = "https://github.com/em1208/adrf"
 repository = "https://github.com/em1208/adrf"
-include = [
-    "LICENSE",
-]
+include = ["LICENSE"]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
 django = ">=4.1"
 djangorestframework = ">=3.14.0"
+async-property = ">=0.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
