--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = ">=3.8"
 django = ">=4.1"
 djangorestframework = ">=3.14.0"
 async-property = ">=0.2.2"
+isort = "5.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
