Added support for async authentication, permission and throttle classes and test for python 3.12

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest_cov = "^4.0.0"
 pytest-django = "^4.5.2"
 tox = "^3.27.1"
 tox-py = "^1.3.0"
+faker = "^22.0.0"
 
 [build-system]
 requires = ["poetry-core"]
