--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 isolated_build = True
 envlist =
-       {py38,py39,py310,py311}-django41
-       {py38,py39,py310,py311}-django42
-       {py310,py311}-djangomain
+       {py38,py39,py310,py311,py312}-django41
+       {py38,py39,py310,py311,py312}-django42
+       {py310,py311,py312}-djangomain
 
 [testenv]
 allowlist_externals = poetry
