--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
        {py38,py39,py310,py311,py312}-django41
        {py38,py39,py310,py311,py312}-django42
        {py310,py311,py312}-djangomain
+       lint
 
 [testenv]
 allowlist_externals = poetry
@@ -20,3 +21,11 @@ ignore_outcome = true
 
 [testenv:py311-djangomain]
 ignore_outcome = true
+
+[testenv:py312-djangomain]
+ignore_outcome = true
+
+
+[testenv:lint]
+deps = ruff
+commands = ruff check adrf
