--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,13 @@ djangorestframework = ">=3.14.0"
 async-property = ">=0.2.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.2.0"
-pytest_cov = "^4.0.0"
-pytest-django = "^4.5.2"
-tox = "^3.27.1"
-tox-py = "^1.3.0"
-faker = "^22.0.0"
+pytest = "^8.0.2"
+pytest_cov = "^4.1.0"
+pytest-django = "^4.8.0"
+tox = "^3.28.0"
+tox-py = "^1.3.1"
+faker = "^24.2.0"
+ruff = "^0.3.3"
 
 [build-system]
 requires = ["poetry-core"]
