Added async viewset support and generics

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,21 @@ ruff = "^0.5.5"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff.lint]
+extend-select = ["I"]
+
+[tool.coverage.run]
+source = ["adrf"]
+branch = true
+parallel = true
+
+[tool.coverage.report]
+show_missing = true
+exclude_lines = [
+    "pragma: no cover",
+    "raise NotImplementedError"
+]
+
+[tool.pytest]
+addopts="--tb=short --strict-markers -ra"
