--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,43 @@
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.6.0
-  hooks:
-  - id: check-ast
-  - id: check-added-large-files
-  - id: check-case-conflict
-  - id: check-json
-  - id: check-merge-conflict
-  - id: check-symlinks
-  - id: check-toml
-  - id: end-of-file-fixer
-  - id: trailing-whitespace
-- repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.5.5
-  hooks:
-    # Run the linter.
-    - id: ruff
-      args: [ --fix ]
-    # Run the formatter.
-    - id: ruff-format
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
+    hooks:
+    -   id: trailing-whitespace
+        exclude: tests/fixtures/
+    -   id: end-of-file-fixer
+        exclude: tests/fixtures/
+    -   id: check-yaml
+        exclude: tests/fixtures/
+    -   id: debug-statements
+        exclude: tests/fixtures/
+    -   id: requirements-txt-fixer
+        exclude: tests/fixtures/
+-   repo: https://github.com/asottile/reorder_python_imports
+    rev: v3.14.0
+    hooks:
+    -   id: reorder-python-imports
+        args: [--py37-plus]
+        exclude: tests/fixtures/
+-   repo: https://github.com/psf/black
+    rev: 23.9.1
+    hooks:
+    -   id: black
+        exclude: tests/fixtures/
+        args:
+          - --line-length=120
+-   repo: https://github.com/PyCQA/autoflake
+    rev: v2.3.1
+    hooks:
+    -   id: autoflake
+        args: [--remove-all-unused-imports, --in-place]
+        exclude: tests/fixtures/
+-   repo: https://github.com/PyCQA/flake8
+    rev: 7.1.1
+    hooks:
+    -   id: flake8
+        exclude: tests/fixtures/
+        args:
+          - --max-line-length=120
+          - --extend-ignore=W503,E203
+        additional_dependencies:
+          - flake8-string-format
