Updated Github workflow config

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 isolated_build = True
 envlist =
-       {py38,py39,py310,py311,py312}-django42
-       {py310,py311,py312}-djangomain
+       {py39,py310,py311,py312,py313,py314}-django42
+       {py310,py311,py312,py313,py314}-djangomain
        lint
 
 [testenv]
