--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 isolated_build = True
 envlist =
        {py39,py310,py311,py312,py313,py314}-django42
+       {py310,py311,py312,py313,py314}-django52
        {py310,py311,py312,py313,py314}-djangomain
        lint
 
@@ -12,7 +13,8 @@ commands =
         poetry run pytest --cov-report term-missing --cov {posargs}
 envdir = {toxworkdir}/venvs/{envname}
 deps =
-        django41: Django>=4.1,<4.3
+        django42: Django>=4.2,<4.3
+        django52: Django>=5.2,<5.3
         djangomain: https://github.com/django/django/archive/main.tar.gz
 
 [testenv:py310-djangomain]
@@ -22,6 +24,12 @@ ignore_outcome = true
 ignore_outcome = true
 
 [testenv:py312-djangomain]
+ignore_outcome = true
+
+[testenv:py313-djangomain]
+ignore_outcome = true
+
+[testenv:py314-djangomain]
 ignore_outcome = true
 
 [testenv:lint]
